Add post and delete imposter and put stubs

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -17,15 +17,18 @@ $base-color: #aa920c
         flex-direction: row
         justify-content: space-between
         flex: 1
+.container
+    min-height: 100vh
 .footer
     display: flex
     background-color: $base-color
     justify-content: space-between
     align-items: center
-    position: fixed
-    bottom: 0
+    margin-top: auto
     width: 100%
     > .footer-right
         margin-right: 1em
 .footer-left > .footer-logo
-    width: 10%    
+    margin-left: 1em
+    width: 10% 
+    
