--- a/src/app/imposters/imposter-detail.component.sass
+++ b/src/app/imposters/imposter-detail.component.sass
@@ -1,3 +1,5 @@
+@import "../../styles.sass"
+
 .btn
     background-color: yellow
 
@@ -13,3 +15,16 @@
     margin: 1em 0
     padding: 0
     margin-right: 5em
+
+.stub-container
+    display: flex
+    flex-direction: column
+    justify-content: space-around
+
+.stub-card
+    border: 1px solid black
+    padding: 10px
+    margin: 5px
+    display: flex
+    flex-direction: row
+    justify-content: space-between
