Add some styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <a class='nav-link' [routerLink]="['/config']">Config</a>
   </div>
 </nav>
-<div class='container'>
+<div class='main-container'>
   <router-outlet></router-outlet>
 </div>
 <div class='footer'>
