--- a/src/app/imposters/imposter-detail.component.sass
+++ b/src/app/imposters/imposter-detail.component.sass
@@ -1,11 +1,7 @@
 @import "../../styles.sass"
 
-.btn
-    background-color: yellow
-
 .stub
     margin-left: 5em
-
 
 .separator
     display: block
@@ -26,5 +22,7 @@
     padding: 10px
     margin: 5px
     display: flex
-    flex-direction: row
+    flex-direction: column
     justify-content: space-between
+    align-items: center
+    background-color: #d4cfc8
