--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,2 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
 $main-color: #aa920c
+
+.card
+    display: flex 
+    flex-direction: column 
+    > .card-header
+        align-self: center
+    > .card-footer
+        align-self: center
+    > .card-body
+        display: flex
+        flex-direction: column
+
+.main-container
+    background-color: #d6beb7
+    font-family: times-new-roman
+
+textarea
+    max-width: 80%
+    width: 80%
+    
+.btn
+    display: inline-block
+    padding: 0.3em 1.2em
+    margin: 0 0.3em 0.3em 0
+    border-radius: 0.3em
+    box-sizing: border-box
+    text-decoration: none
+    font-family: 'Roboto', sans-serif
+    font-weight: 300
+    color: black
+    background-color: $main-color
+    text-align: center
+    transition: all 0.2s
+
+.btn:hover
+    background-color: #aa920c8e
+    box-shadow: 0 0.6em 0.8em 0 rgba(0,0,0,0.24), 0 0.85em 2.5em 0 rgba(0,0,0,0.19) 
+
+@media all and (max-width: 30em)
+    .btn
+        display: block
+        margin: 0.2em auto
