--- a/src/app/imposters/imposter-list.component.sass
+++ b/src/app/imposters/imposter-list.component.sass
@@ -6,9 +6,9 @@
 .imposters-table
     display: table
     border-collapse: collapse
-    border: .2em solid #888886
+    border: .2em solid $main-color2
     > tfoot
         text-align: right
 
 .imposter-table > th, tr
-    border: .05em solid #888886
+    border: .05em solid $main-color2
