--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 $main-color: #aa920c
+$main-color2: #8a770a
+$gray: #888886
+
+textarea
+    max-width: 80%
+    width: 80%
 
 .card
     display: flex 
@@ -11,14 +17,13 @@ $main-color: #aa920c
     > .card-body
         display: flex
         flex-direction: column
-
+.card > .card-body > .row
+    display: flex
+    flex-direction: column
 .main-container
     background-color: #d6beb7
     font-family: times-new-roman
 
-textarea
-    max-width: 80%
-    width: 80%
     
 .btn
     display: inline-block
